--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="cleartype" content="on">
-        <meta name="description" content="Venkatesh Desai - MS in Robotics (Computer Science conc.), Northeastern University">
+        <meta name="description" content="Venkatesh Desai - MS in Robotics (Computer Science conc.)<br>Northeastern University">
         <meta name="keywords" content="Venkatesh Desai, MS in Robotics (Computer Science conc.), Northeastern University">
         <meta name="author" content="Venkatesh Desai">
 
@@ -70,9 +70,23 @@
                 <div class="page__inner-wrap" style="text-align: justify; text-justify: inter-word;">
                     <h2 style="font-size: x-large;"><b>About Me</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
-                        <p>I am a graduate from <a href="http://www.iitkgp.ac.in/">Indian Institute of Technology, Kharagpur</a> with a Dual Degree (Bachelors &amp; Masters) in Computer Science &amp; Engineering and a Micro Specialization in Artificial Intelligence. I like to apply my technical skills, accrued from my engineering studies, to conflate the spheres of technology and innovation. I am passionate about applying AI to new domains and developing products that have a meaningful impact on people's lives.</p>
-                        <p>Whether it is academics or management, challenging real-life problem-solving always attracts me. In the quest for expanding my horizons, I have constantly aimed at pursuing diverse interests. I'm a team player and love to work in collaboration. I also believe in helping the community and like to be a leader.</p>
-                        <p>When not coding, you will most often find me making EDM or supporting Manchester United. GGMU :)</p>
+                        <p>I am a Masters student in Robotics at <a href="https://www.northeastern.edu/">Northeastern University, Boston</a>. I engineer the future where machines move with purpose, I like to unravel the mysteries hidden in data, I like sculpt the brains of artificial intelligence, layer by layer, I empower machines with the sense of sight, unlocking a new dimension of understanding, and I like to empower machines to comprehend and communicate with us. Inshort I like to work on projects which involve different projects in Robotics, Machine Learning, Deep Learning, Computer Vision, and Natural Language Processing. I like to apply my technical skills, accrued from my engineering studies, to conflate the spheres of technology and innovation. I am passionate about applying AI to new domains and developing products that have a meaningful impact on people's lives.</p>
+                        
+                        <p>Greetings! 🎓 Currently, I am pursuing my Master's degree in Robotics at <a href="https://graduate.northeastern.edu/program/master-of-science-in-robotics-17772/">Northeastern University, Boston</a>. As a student in this field, I am dedicated to engineering the future where machines operate with precision and purpose, blending the realms of technology and innovation.</p>
+
+                        <p>My passion lies in deciphering the enigmatic world of data, meticulously unraveling its complexities to extract valuable insights. I consider myself an adept navigator of the intricate landscapes of information. 🌐</p>
+
+                        <p>Additionally, I am deeply engaged in the realm of artificial intelligence, where I undertake the task of sculpting the cognitive architecture of machines, layer by layer. Through this endeavor, I strive to contribute to the advancement of intelligent systems. 🤖</p>
+
+                        <p>Furthermore, I am committed to empowering machines with the ability to perceive and understand the visual world, thereby broadening the horizons of technological capabilities. This involves delving into areas such as Computer Vision, where I endeavor to unlock new dimensions of comprehension. 👁️</p>
+
+                        <p>My professional interests extend to projects spanning Robotics, Machine Learning, Deep Learning, Computer Vision, and Natural Language Processing. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. 🔬</p>
+
+                        <p>Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life. In essence, my work transcends mere occupation; it embodies a fervent dedication to leveraging technology for positive change. 🚀</p>
+
+                        <p>If you share my passion for innovation and technological advancement, I invite you to join me on this journey of exploration and discovery. 🌟</p>
+
+                        <p>When not coding, you will most often find me playing cricket, chess or supporting Virat Kohli 🏏, Magnus Carlsen ♟️ and Carlos Sainz (Smooth Operator...) 🏎️ :)</p>
                     </section>
                     <h2 style="font-size: x-large;"><b>Interests</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
