--- a/index.html
+++ b/index.html
@@ -71,14 +71,16 @@
                     <h2 style="font-size: x-large;"><b>About Me</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
                         <!-- <p>I am a Masters student in Robotics at <a href="https://www.northeastern.edu/">Northeastern University, Boston</a>. I engineer the future where machines move with purpose, I like to unravel the mysteries hidden in data, I like sculpt the brains of artificial intelligence, layer by layer, I empower machines with the sense of sight, unlocking a new dimension of understanding, and I like to empower machines to comprehend and communicate with us. Inshort I like to work on projects which involve different projects in Robotics, Machine Learning, Deep Learning, Computer Vision, and Natural Language Processing. I like to apply my technical skills, accrued from my engineering studies, to conflate the spheres of technology and innovation. I am passionate about applying AI to new domains and developing products that have a meaningful impact on people's lives.</p> -->
-                        
-                        <p>Greetings! 🎓 Currently, I am pursuing my Master's degree in Robotics at <a href="https://graduate.northeastern.edu/program/master-of-science-in-robotics-17772/">Northeastern University, Boston</a>. As a student in this field, I am dedicated to engineering the future where machines operate with precision and purpose, blending the realms of technology and innovation.</p>
 
-                        <p>My passion lies in deciphering the enigmatic world of data, meticulously unraveling its complexities to extract valuable insights. I consider myself an adept navigator of the intricate landscapes of information. 🌐</p>
+                        <p><em>"Currently unraveling the mysteries hidden in data 🌐, sculpting ⛏️ the brains of artificial intelligence layer by layer, teaching robots 🤖 to navigate the world,  empowering machines with the sense of sight 👁️, and empowering machines to comprehend and communicate with us."</em></p>
+                        
+                        <p>Greetings! 🎓 Currently, I am pursuing my Master's degree in Robotics at <a href="https://graduate.northeastern.edu/program/master-of-science-in-robotics-17772/">Northeastern University, Boston</a>. I did my Bachelors from <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> As a student in this field, I am dedicated to engineering the future where machines operate with precision and purpose, blending the realms of technology and innovation.</p>
+
+                        <!-- <p>My passion lies in interpreting the mysterious world of data, meticulously untangling its complexities to extract valuable insights. I consider myself an adept navigator of the intricate landscapes of information. 🌐</p>
 
                         <p>Additionally, I am deeply engaged in the realm of artificial intelligence, where I undertake the task of sculpting the cognitive architecture of machines, layer by layer. Through this endeavor, I strive to contribute to the advancement of intelligent systems. 🤖</p>
 
-                        <p>Furthermore, I am committed to empowering machines with the ability to perceive and understand the visual world, thereby broadening the horizons of technological capabilities. This involves delving into areas such as Computer Vision, where I endeavor to unlock new dimensions of comprehension. 👁️</p>
+                        <p>Furthermore, I am committed to empowering machines with the ability to perceive and understand the visual world, thereby broadening the horizons of technological capabilities. This involves delving into areas such as Computer Vision, where I endeavor to unlock new dimensions of comprehension. 👁️</p> -->
 
                         <p>My professional interests extend to projects spanning Robotics, Machine Learning, Deep Learning, Computer Vision, and Natural Language Processing. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. 🔬</p>
 
@@ -90,7 +92,7 @@
                     </section>
                     <h2 style="font-size: x-large;"><b>Interests</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
-                        <p>Machine Learning, Deep Learning, Natural Language Processing, Computer Vision, Software Engineering</p>
+                        <p>Data Science, Machine Learning, Deep Learning, Natural Language Processing, Computer Vision, Robotics</p>
                     </section>
                     <footer class="page__meta"><br></footer>
                 </div>
