--- a/ml-projects.html
+++ b/ml-projects.html
@@ -36,7 +36,7 @@
                 "name": "Venkatesh Desai",
                 "url": "https://venkydesai.github.io/experience.html",
                 "logo": "https://venkydesai.github.io/images/venky_profile.png",
-                "description": "Venkatesh Desai ... possesses an impressive range of work experiences across renowned companies. As an Applied Scientist Intern at Amazon, his contributions were instrumental in developing ML and DL algorithms to detect advanced robotic behaviors, safeguarding Amazon advertisers from fraud, and generating substantial revenue. During his time as a Research Intern at IBM Research AI, he conducted statistical analysis to improve predictive process models. At Adobe Inc., as a Research Intern in the Big Data Experience Lab, Abhinav created a machine learning-based framework for automated document generation from procedural videos, making multimedia more accessible. His work resulted in a publication at ACM IUI and a US Patent. His tenure as a Software Development Intern at Philips India Ltd. involved developing an ML-based software to predict software vulnerabilities and optimizing the testing process. Finally, his research internship at the Indian Institute of Management, Ahmedabad, involved implementing an unsupervised topic modeling algorithm for extracting relevant articles from news feeds. Abhinav's diverse experiences highlight his expertise in various domains and his ability to contribute effectively to different projects and organizations.",
+                "description": "Venkatesh Desai ... ",
                 "address": {
                     "@type": "PostalAddress",
                     "addressLocality": "Boston",
@@ -51,11 +51,8 @@
                     "contactType": "Personal Profile"
                 },
                 "sameAs": [
-                    "https://www.facebook.com/abhinavbohra01",
-                    "https://www.twitter.com/abhinavbohra01",
                     "https://www.linkedin.com/in/venkateshdesai99",
-                    "https://github.com/venkydesai",
-                    "https://scholar.google.com/citations?user=F51Ct9oAAAAJ&hl=en"
+                    "https://github.com/venkydesai"
                 ]
             }
         </script>
@@ -350,7 +347,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Automated Essay Scoring with Transformers</p>
-                                                    <p class="subtitle is-6"></p>
+                                                    <p class="subtitle is-6">Developed an advanced model utilizing state-of-the-art Transformers technology to accurately grade essays, achieving results that closely align with human graders</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
@@ -359,7 +356,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/VAE.png" style="width:100%; height:160px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/automated_essay_scoring.jpg" style="width:100%; height:160px; border-radius: 10px; margin-bottom: 5%; align-self: center;"></a>
                                         <div class="tags">
                                             <span class="tag">Python</span>
                                             <span class="tag">Pandas</span>
@@ -409,7 +406,7 @@
                                             <div class="row">
                                                 <div class="col-lg-9">
                                                     <p class="title is-5">Scan Matching using Iterative closest point</p>
-                                                    <p class="subtitle is-6">.Implementation of privacy-preserving SVM with partial homomorphic encryption.</p>
+                                                    <p class="subtitle is-6">Implemented Iterative Closest Point algorithm</p>
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
