--- a/skills.html
+++ b/skills.html
@@ -37,7 +37,7 @@
                 "name": "Venkatesh Desai",
                 "url": "https://venkydesai.github.io/experience.html",
                 "logo": "https://venkydesai.github.io/images/venky_profile.png",
-                "description": "Venkatesh Desai ... possesses an impressive range of work experiences across renowned companies. As an Applied Scientist Intern at Amazon, his contributions were instrumental in developing ML and DL algorithms to detect advanced robotic behaviors, safeguarding Amazon advertisers from fraud, and generating substantial revenue. During his time as a Research Intern at IBM Research AI, he conducted statistical analysis to improve predictive process models. At Adobe Inc., as a Research Intern in the Big Data Experience Lab, Abhinav created a machine learning-based framework for automated document generation from procedural videos, making multimedia more accessible. His work resulted in a publication at ACM IUI and a US Patent. His tenure as a Software Development Intern at Philips India Ltd. involved developing an ML-based software to predict software vulnerabilities and optimizing the testing process. Finally, his research internship at the Indian Institute of Management, Ahmedabad, involved implementing an unsupervised topic modeling algorithm for extracting relevant articles from news feeds. Abhinav's diverse experiences highlight his expertise in various domains and his ability to contribute effectively to different projects and organizations.",
+                "description": "Venkatesh Desai ... ",
                 "address": {
                     "@type": "PostalAddress",
                     "addressLocality": "Boston",
