--- a/header.html
+++ b/header.html
@@ -6,7 +6,8 @@
             <ul class="visible-links">
                <li style="font-size: medium;"><a href="index.html">Home</a></li>
                <li style="font-size: medium;"><a href="experience.html">Experience</a></li>
-               <li style="font-size: medium;"><a href="ml-projects.html">ML Projects</a></li>
+               <li style="font-size: medium;"><a href="ml-projects.html">Projects</a></li>
+               <li style="font-size: medium;"><a href="notable_projects.html">Notable Projects</a></li>
                <li style="font-size: medium;"><a href="sde-projects.html">SDE Projects</a></li>
                <li style="font-size: medium;"><a href="other-projects.html">Other Projects</a></li>
                <li style="font-size: medium;"><a href="case-studies.html">Case Studies</a></li>
