--- a/notable_projects.html
+++ b/notable_projects.html
@@ -128,7 +128,7 @@
                                     <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/chatgpt" style="color:#52adc8">GPT from Scratch</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
-                                    <div class="w3-content w3-display-container slider" id="div1">
+                                    <div class="w3-content w3-display-container slider" id="div2">
                                         <img class="mySlides" src="images/notable_projects/attention_research_1.jpeg" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/Full_GPT_architecture.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/decoder.png" style="width:100%; height:285px; border-radius: 10px;">
@@ -151,7 +151,7 @@
                                     </figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="title is-4">Super Resolution using CRN Architecture
+                                    <p class="title is-4">Super Resolution using Cascading Residual Network (CRN) Architecture
                                     </p>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@
                                     <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Super_Resolution" style="color:#52adc8"></a>Super Resolution using CRN Architecture</p>
                                 </div>
                                 <div class="content col-lg-6" >
-                                    <div class="w3-content w3-display-container slider" id="div1">
+                                    <div class="w3-content w3-display-container slider" id="div3">
                                         <img class="mySlides" src="images/notable_projects/Result_Set14.jpg" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/result_Urban100.jpg" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/Cascading.png" style="width:100%; height:285px; border-radius: 10px;">
@@ -207,7 +207,7 @@
                                     <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8"></a>Shadow removal via Shadow Decomposition</p>
                                 </div>
                                 <div class="content col-lg-6" >
-                                    <div class="w3-content w3-display-container slider" id="div1">
+                                    <div class="w3-content w3-display-container slider" id="div4">
                                         <img class="mySlides" src="images/notable_projects/shadow/images.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/shadow/shadow.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/shadow/Unet_Reconstruction_Loss.png" style="width:100%; height:285px; border-radius: 10px;">
@@ -243,7 +243,7 @@
                                     <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point" style="color:#52adc8"></a>Iterative Closest Point</p>
                                 </div>
                                 <div class="content col-lg-6" >
-                                    <div class="w3-content w3-display-container slider" id="div1">
+                                    <div class="w3-content w3-display-container slider" id="div5">
                                         <img class="mySlides" src="images/notable_projects/ICp/2.gif" style="width:100%; height:285px; border-radius: 10px;">
                                         <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
                                         <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this,1)">&#10095;</a>
@@ -283,7 +283,7 @@
                                     <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8"></a>Shadow removal via Shadow Decomposition</p>
                                 </div>
                                 <div class="content col-lg-6" >
-                                    <div class="w3-content w3-display-container slider" id="div1">
+                                    <div class="w3-content w3-display-container slider" id="div6">
                                         <img class="mySlides" src="images/notable_projects/shadow/images.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/shadow/shadow.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <img class="mySlides" src="images/notable_projects/shadow/Unet_Reconstruction_Loss.png" style="width:100%; height:285px; border-radius: 10px;">
