--- a/notable_projects.html
+++ b/notable_projects.html
@@ -69,11 +69,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
+                                <!-- <div class="media-left">
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">Automated Essay Scoring with Transformers</p>
                                 </div>
@@ -140,7 +140,9 @@
                         </div>
                     </div>
                 </div>
+
                 <h2 style="font-size: x-large;"><b>Copmuter Vision</b></h2>
+
                 <div class="list__item" style="margin-top: 2%;">
                     <div class="card">
                         <div class="card-content">
