--- a/notable_projects.html
+++ b/notable_projects.html
@@ -107,18 +107,19 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
+                                <!-- <div class="media-left">
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">GPT from Scratch</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="content col-lg-6">
-                                    <p style="text-align: justify;  text-justify: inter-word;"> Building a language model from scratch focusing on a character-level language model based on the Transformer architecture. The model is trained on a dataset of Shakespeare's plays and learns to predict the next character in a sequence.</p>
+                                    <p style="text-align: justify;  text-justify: inter-word;"> <p>In this, I have implemented the Iterative Closest Point (ICP) algorithm, and used it to estimate the rigid transformation that optimally aligns two 3D point clouds. The given two point clouds <em>X</em>, <em>Y</em> ⊂ ℝ<sup>d</sup> have an initial guess (<em>t<sub>o</sub></em>, <em>R<sub>o</sub></em>) ∈ SE(d) for the optimal rigid registration <em>y = R<sub>x</sub> + t</em> aligning <em>X</em> to <em>Y</em>.</p>
+                                </p>
                                     <div class="tags">
                                         <span class="tag">Python</span>
                                         <span class="tag">Deep Learning</span>
@@ -147,11 +148,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
+                                <!-- <div class="media-left">
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">Super Resolution using Cascading Residual Network (CRN) Architecture
                                     </p>
@@ -166,7 +167,7 @@
                                         <span class="tag">NLP</span>
                                         <span class="tag">Transformers</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Super_Resolution" style="color:#52adc8"></a>Super Resolution using CRN Architecture</p>
+                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Super_Resolution" style="color:#52adc8">Super Resolution using CRN Architecture</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div3">
@@ -185,11 +186,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
+                                <!-- <div class="media-left">
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">Shadow removal via Shadow Decomposition
                                     </p>
@@ -206,7 +207,7 @@
                                         <span class="tag">VGGNet</span>
                                         <span class="tag">U-Net</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8"></a>Shadow removal via Shadow Decomposition</p>
+                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8">Shadow removal via Shadow Decomposition</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div4">
@@ -225,11 +226,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
+                                <!-- <div class="media-left">
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">Scan Matching using Iterative closest point
                                     </p>
@@ -242,7 +243,7 @@
                                         <span class="tag">Python</span>
                                         <span class="tag">Iterative Closest Point</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point" style="color:#52adc8"></a>Iterative Closest Point</p>
+                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Scan-matching-using-iterative-closest-point" style="color:#52adc8">Iterative Closest Point</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div5">
@@ -261,11 +262,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
-                                <div class="media-left">
+                                <!-- <div class="media-left">
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="media-content">
                                     <p class="title is-4">Shadow removal via Shadow Decomposition
                                     </p>
@@ -282,7 +283,7 @@
                                         <span class="tag">VGGNet</span>
                                         <span class="tag">U-Net</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8"></a>Shadow removal via Shadow Decomposition</p>
+                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8">Shadow removal via Shadow Decomposition</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div6">
