--- a/notable_projects.html
+++ b/notable_projects.html
@@ -118,8 +118,8 @@
                             </div>
                             <div class="row">
                                 <div class="content col-lg-6">
-                                    <p style="text-align: justify;  text-justify: inter-word;"> <p>In this, I have implemented the Iterative Closest Point (ICP) algorithm, and used it to estimate the rigid transformation that optimally aligns two 3D point clouds. The given two point clouds <em>X</em>, <em>Y</em> ⊂ ℝ<sup>d</sup> have an initial guess (<em>t<sub>o</sub></em>, <em>R<sub>o</sub></em>) ∈ SE(d) for the optimal rigid registration <em>y = R<sub>x</sub> + t</em> aligning <em>X</em> to <em>Y</em>.</p>
-                                </p>
+                                    <p style="text-align: justify;  text-justify: inter-word;"> Built a language model from scratch focusing on a character-level language model based on the Transformer architecture. The model is trained on a dataset of Shakespeare's plays and learns to predict the next character in a sequence.
+                                    </p>
                                     <div class="tags">
                                         <span class="tag">Python</span>
                                         <span class="tag">Deep Learning</span>
@@ -238,7 +238,7 @@
                             </div>
                             <div class="row">
                                 <div class="content col-lg-6">
-                                    <p style="text-align: justify;  text-justify: inter-word;">My innovative project 'Scan Matching using Iterative Closest Point' (ICP) showcases seamless merging the power of computer vision and geometric algorithms, my solution meticulously aligns 3D scans, enabling precise registration and mapping of real-world environments. Harnessing the iterative refinement process of ICP, my project delivers robust and accurate alignments, crucial for applications ranging from robotics navigation to augmented reality.</p>
+                                    <p style="text-align: justify;  text-justify: inter-word;">I have implemented the Iterative Closest Point (ICP) algorithm, and used it to estimate the rigid transformation that optimally aligns two 3D point clouds. The given two point clouds <em>X</em>, <em>Y</em> ⊂ ℝ<sup>d</sup> have an initial guess (<em>t<sub>o</sub></em>, <em>R<sub>o</sub></em>) ∈ SE(d) for the optimal rigid registration <em>y = R<sub>x</sub> + t</em> aligning <em>X</em> to <em>Y</em>.</p></p>
                                     <div class="tags">
                                         <span class="tag">Python</span>
                                         <span class="tag">Iterative Closest Point</span>
