--- a/notable_projects.html
+++ b/notable_projects.html
@@ -141,8 +141,8 @@
                         </div>
                     </div>
                 </div>
-
-                <h2 style="font-size: x-large;"><b>Copmuter Vision</b></h2>
+                <br>
+                <h2 style="font-size: x-large;"><b>Computer Vision</b></h2>
 
                 <div class="list__item" style="margin-top: 2%;">
                     <div class="card">
@@ -256,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-
+                <br>
                 <h2 style="font-size: x-large;"><b>Robotics</b></h2>
                 <div class="list__item" style="margin-top: 2%;">
                     <div class="card">
@@ -268,28 +268,32 @@
                                     </figure>
                                 </div> -->
                                 <div class="media-content">
-                                    <p class="title is-4">Shadow removal via Shadow Decomposition
+                                    <p class="title is-4">Autonomous Ground Robot For Reconnaissance
                                     </p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="content col-lg-6">
-                                    <p style="text-align: justify;  text-justify: inter-word;">This project aims to use deep learning method for shadow removal. Inspired by physical models of shadow formation, they use a linear illumination transformation to model the shadow effects in the image that allows the shadow image to be expressed as a combination of the shadow-free image, the shadow parameters, and a matte layer. The model uses two deep networks, namely SP-Net and M-Net, to predict the shadow parameters and the shadow matte respectively.</p>
+                                    <p style="text-align: justify;  text-justify: inter-word;">In this project, we deploy an autonomous reconnaissance system using a 2-wheeled differential drive robot. Our focus lies in optimizing the environment mapping algorithm to aid in rescue missions. Utilizing a 360° LiDAR for localization and mapping, and a Raspberry Pi Camera for tag detection, our robot scans the environment for April tags (serving as substitutes for victims). The gmapping based SLAM and Rapidly Exploring Random Tree (RRT) based exploration are  employed for mapping and exploration.</p>
                                     <div class="tags">
                                         <span class="tag">Python</span>
-                                        <span class="tag">Pytorch</span>
-                                        <span class="tag">Deep Learning</span>
-                                        <span class="tag">ResNet</span>
-                                        <span class="tag">VGGNet</span>
-                                        <span class="tag">U-Net</span>
+                                        <span class="tag">ROS</span>
+                                        <span class="tag">Intrinsic Calibration</span>
+                                        <span class="tag">LiDAR</span>
+                                        <span class="tag">TurtleBot3</span>
+                                        <span class="tag">AprilTag</span>
                                     </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Shadow_removal_via_shadow_decomposition" style="color:#52adc8">Shadow removal via Shadow Decomposition</a></p>
+                                    <p>Project Link: &nbsp; <a href="https://github.com/venkydesai/Team-Splinter-Autonomous-Ground-Robot-For-Reconnaissance/tree/main" style="color:#52adc8">Autonomous Ground Robot For Reconnaissance</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div6">
-                                        <img class="mySlides" src="images/notable_projects/shadow/images.png" style="width:100%; height:285px; border-radius: 10px;">
-                                        <img class="mySlides" src="images/notable_projects/shadow/shadow.png" style="width:100%; height:285px; border-radius: 10px;">
-                                        <img class="mySlides" src="images/notable_projects/shadow/Unet_Reconstruction_Loss.png" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/Rescue_robot.jpg" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/Robot_maze.png" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/April_Tag.png" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/RRT_local.jpeg" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/Map_final.png" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/Map_final.png" style="width:100%; height:285px; border-radius: 10px;">
+                                        <img class="mySlides" src="images/notable_projects/RRT/global_local_frontier_detection.png" style="width:100%; height:285px; border-radius: 10px;">
                                         <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
                                         <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this,1)">&#10095;</a>
                                     </div>
