--- a/notable_projects.html
+++ b/notable_projects.html
@@ -73,9 +73,14 @@
                                     <figure class="image is-48x48">
                                         <img src="images/sde-projects/have_logo.png" alt="Placeholder image">
                                     </figure>
-                                </div> -->
+                                </div> -->    
                                 <div class="media-content">
-                                    <p class="title is-4">Automated Essay Scoring with Transformers</p>
+                                    <div class="row">
+                                        <p class="title is-4">Automated Essay Scoring with Transformers</p>
+                                        <div class="col-lg-3">
+                                            <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:70%; height:70%; border-radius: 10px; "></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
