--- a/notable_projects.html
+++ b/notable_projects.html
@@ -75,12 +75,13 @@
                                     </figure>
                                 </div> -->    
                                 <div class="media-content">
-                                    <div class="row">
+                                    <p class="title is-4">Automated Essay Scoring with Transformers</p>
+                                    <!-- <div class="row">
                                         <p class="title is-4">Automated Essay Scoring with Transformers</p>
                                         <div class="col-lg-3">
                                             <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:20%; height:20%; border-radius: 10px; "></a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="row">
