--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         <p>If you share my passion for innovation and technological advancement, I invite you to join me on this journey of exploration and discovery. 🌟</p>
 
-                        <p>When not coding, you will most often find me playing cricket, chess or supporting Virat Kohli 🏏, Magnus Carlsen ♟️ and Carlos Sainz (Smooth Operator...) 🏎️ :)</p>
+                        <p>When not coding, you will most often find me playing cricket, chess or supporting Virat Kohli 🏏, Magnus Carlsen ♟️ and Carlos Sainz (Smooth Operator... 🏎️) :)</p>
                     </section>
                     <h2 style="font-size: x-large;"><b>Interests</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
