--- a/skills.html
+++ b/skills.html
@@ -50,14 +50,7 @@
                     "telephone": " +1-857-2306277",
                     "email": "venkateshdesai301@gmail.com",
                     "contactType": "Personal Profile"
-                },
-                "sameAs": [
-                    "https://www.facebook.com/abhinavbohra01",
-                    "https://www.twitter.com/abhinavbohra01",
-                    "https://www.linkedin.com/in/venkateshdesai99",
-                    "https://github.com/venkydesai",
-                    "https://scholar.google.com/citations?user=F51Ct9oAAAAJ&hl=en"
-                ]
+                }
             }
         </script>
     </head>
@@ -78,51 +71,62 @@
                         <!-- <span class="tag">C++</span> -->
                         <span class="tag">Python</span>
                         <span class="tag">Matlab</span>
-                        <!-- <span class="tag">MySQL</span> -->
-                        <!-- <span class="tag">Dart</span> -->
+                        <span class="tag">SQL</span>
+                        <span class="tag">C</span>
+                        <span class="tag">C++</span>
+                        <span class="tag">JAVA</span>
+                        <span class="tag">R</span>
+                        <span class="tag">bash/ shell scripting</span>
 
                     </li>
                     <li>Familiar:&nbsp;
-                        <span class="tag">Java</span>
-                        <!-- <span class="tag">JavaScript</span> -->
+                        <span class="tag">PySpark</span>
                         <span class="tag">Scala</span>
                     </li>
                 </ul>
                 <br>
-                <b>Libraries</b>
+                <b>Tools</b>
                 <ul style="padding-top: 5px; padding-bottom: 15px">
                     <li>Proficient:
                         <span class="tag">Numpy</span>
                         <span class="tag">Pandas</span>
-                        <!-- <span class="tag">Keras</span> -->
+                        <span class="tag">scikit-learn</span>
                         <span class="tag">PyTorch</span>
                         <span class="tag">TensorFlow</span>
-                        <span class="tag">PySpark</span>
-                        <span class="tag">Sci-kit Learn</span>
                         <span class="tag">NLTK (NLP)</span>
                         <span class="tag">OpenCV</span>
                         <span class="tag">Matplotlib</span>
                         <span class="tag">Seaborn</span>
                         <span class="tag">Docker</span>
-                        <span class="tag">git</span>
+                        <span class="tag">GitHub</span>
                         <span class="tag">AWS</span>
                         <span class="tag">GCP</span>
+                        <span class="tag">ZenML</span>
+                        <span class="tag">MLflow</span>
+                        <span class="tag">PowerBi</span>
+                        <span class="tag">Tableau</span>
 
 
                     </li>
                     <li>Familiar:&nbsp;
                         <span class="tag">Spark</span>
-                        <span class="tag">Speech_Recognition</span>
-                        <!-- <span class="tag">OpenCV</span> -->
+                        <span class="tag">Snowflake</span>
+                        <span class="tag">Jira</span>
+                        <span class="tag">Azure</span>
+                        <span class="tag">Kafka</span>
+                        <span class="tag">Databricks</span>
                     </li>
                 </ul>
                 <br>
-                <!-- <b>Frameworks:</b>
-                <span class="tag">Flask</span>
-                <span class="tag">Django</span>
-                <span class="tag">Flutter</span> -->
-                <!-- <br>
-                <b>Software Packages:</b>
+                <b>Modeling Techniques:</b>
+                <span class="tag">Classification</span>
+                <span class="tag">Regression</span>
+                <span class="tag">clustering</span>
+                <span class="tag">Neural Networks</span>
+                <span class="tag">Self-Supervised Learning</span>
+                <span class="tag">Time-Series ANalysis</span>
+                <br>
+                <!-- <b>Software Packages:</b>
                 <span class="tag">Jupyter Notebook</span>
                 <span class="tag">Apache Zeppelin</span>
                 <span class="tag">Git, GitLab</span>
