--- a/header.html
+++ b/header.html
@@ -8,9 +8,9 @@
                <li style="font-size: medium;"><a href="experience.html">Experience</a></li>
                <li style="font-size: medium;"><a href="ml-projects.html">Projects</a></li>
                <li style="font-size: medium;"><a href="notable_projects.html">Notable Projects</a></li>
-               <li style="font-size: medium;"><a href="sde-projects.html">SDE Projects</a></li>
-               <li style="font-size: medium;"><a href="other-projects.html">Other Projects</a></li>
-               <li style="font-size: medium;"><a href="case-studies.html">Case Studies</a></li>
+               <!-- <li style="font-size: medium;"><a href="sde-projects.html">SDE Projects</a></li> -->
+               <!-- <li style="font-size: medium;"><a href="other-projects.html">Other Projects</a></li> -->
+               <!-- <li style="font-size: medium;"><a href="case-studies.html">Case Studies</a></li> -->
                <li style="font-size: medium;"><a href="skills.html">Skills</a></li>
                <li style="font-size: medium;"><a href="files/venkatesh_resume.pdf">Resume</a></li>
             </ul>
