--- a/sidebar.html
+++ b/sidebar.html
@@ -16,7 +16,7 @@
 				<li><a href="https://github.com/venkydesai">
 					<i class="fa fa-fw fa-github" aria-hidden="true" style="font-size: 20px;"></i>Github
 				</a></li>
-				<!-- li><a href="https://github.com/abhinav-bohra">
+				<!-- li><a href="https://github.com/">
 					<i class="fa fa-fw fa-google-scholar" aria-hidden="true" style="font-size: 20px;"></i>Google Scholar
 				< --/a></li-->
 			</ul>
