git_logo_not_proj

--- a/notable_projects.html
+++ b/notable_projects.html
@@ -95,6 +95,9 @@
                                         <span class="tag">Transformer models - BERT, RoBERTa, DistilBERT, GPT2, DeBERTa</span>
                                         <span class="tag">ML models - Linear Regression, KNN, Random Forest, Adaboost, LSTM, biLSTM</span>
                                     </div>
+                                    <div class="col-lg-3">
+                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:20%; height:20%; border-radius: 10px; "></a>
+                                    </div>
                                     <p>Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a></p>
                                 </div>
                                 <div class="content col-lg-6" >
