--- a/skills.html
+++ b/skills.html
@@ -124,7 +124,7 @@
                 <span class="tag">clustering</span>
                 <span class="tag">Neural Networks</span>
                 <span class="tag">Self-Supervised Learning</span>
-                <span class="tag">Time-Series ANalysis</span>
+                <span class="tag">Time-Series Analysis</span>
                 <!-- <br> -->
                 <br><br>
                 
