--- a/notable_projects.html
+++ b/notable_projects.html
@@ -92,14 +92,30 @@
                                         <span class="tag">Python</span>
                                         <span class="tag">Deep Learning</span>
                                         <span class="tag">NLP</span>
-                                        <span class="tag">Transformer models - BERT, RoBERTa, DistilBERT, GPT2, DeBERTa</span>
-                                        <span class="tag">ML models - Linear Regression, KNN, Random Forest, Adaboost, LSTM, biLSTM</span>
+                                        <span class="tag">Transformer models -</span>
+                                        <span class="tag">BERT</span>
+                                        <span class="tag">DeBERTa</span>
+                                        <span class="tag">RoBERTa</span>
+                                        <span class="tag">DistilBERT</span>
+                                        <span class="tag">GPT2</span>
+                                        <span class="tag">BERT</span>
+                                        <span class="tag">DeBERTa</span>
+                                        <span class="tag">ML models -</span>
+                                        <span class="tag">Linear Regression</span>
+                                        <span class="tag">KNN</span>
+                                        <span class="tag">Random Forest</span>
+                                        <span class="tag">Adaboost</span>
+                                        <span class="tag">LSTM</span>
+                                        <span class="tag">biLSTM</span>
+
                                     </div>
                                     <!-- class="col-lg-3" -->
-                                    <div class="media-left">
-                                        <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:30%; height:30%; border-radius: 10px; "></a>
-                                    </div>
-                                    <p>Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a></p>
+                                    <div class="row">
+                                        <div class="media-left">
+                                            <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:10%; height:10%; border-radius: 10px; "></a>
+                                        </div>
+                                            <p>Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a></p>
+                                    </div>     
                                 </div>
                                 <div class="content col-lg-6" >
                                     <div class="w3-content w3-display-container slider" id="div1">
