--- a/notable_projects.html
+++ b/notable_projects.html
@@ -114,7 +114,7 @@
                                         <div class="media-left">
                                             <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:10%; height:10%; border-radius: 10px; "></a>
                                         </div>
-                                            <p>Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a></p>
+                                            Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a>
                                     </div>     
                                 </div>
                                 <div class="content col-lg-6" >
