--- a/sidebar.html
+++ b/sidebar.html
@@ -3,7 +3,7 @@
 		<div class="author__avatar"> <img src="images/venky_profile.png" class="author__avatar" alt="Venkatesh Desai" style="padding-top: 0%; padding-bottom: 0%;"></div>
 		<div class="author__content"><br>
 			<h2 class="author__name"><b>Venkatesh Desai</b></h2>
-			<p class="author__bio"  style="font-size: 15px;">MS in Robotics (Computer Science)<br>Northeastern University<br>Boston, MA</p>
+			<p class="author__bio"  style="font-size: 15px;">MS in Robotics (CS conc.)<br>Northeastern University<br>Boston, MA</p>
 		</div>
 		<div class="author__urls-wrapper">
 			<ul class="author__urls social-icons">
