--- a/notable_projects.html
+++ b/notable_projects.html
@@ -111,11 +111,11 @@
                                     </div>
                                     <!-- class="col-lg-3" -->
                                     <div class="row">
-                                        <div class="media-left">
+                                        <!-- <div class="media-left"> -->
                                             <a href="https://github.com/venkydesai/credit-card-fraud-detection"><img src="images/ml-projects/github.png" style="width:5%; height:5%; border-radius: 30px; "></a>
                                         
                                             Project Link: &nbsp; <a href="https://github.com/suhasmaddali/English-Language-Learning-Prediction-with-AI-and-Machine-Learning/tree/main" style="color:#52adc8">Automated Essay Scoring</a>
-                                        </div>
+                                        <!-- </div> -->
                                     </div>     
                                 </div>
                                 <div class="content col-lg-6" >
